--- a/package.json
+++ b/package.json
@@ -1,30 +1,18 @@
 {
-  "name": "facebook-message-bot",
+  "name": "facebook-group-bot",
   "version": "1.0.0",
-  "description": "A Facebook messaging bot using fca-mafiya library",
-  "main": "bot.js",
+  "description": "Advanced Facebook Group Message Bot",
+  "main": "server.js",
   "scripts": {
-    "start": "node bot.js",
-    "dev": "node bot.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
-  "keywords": [
-    "facebook",
-    "bot",
-    "messenger",
-    "automation",
-    "fca-mafiya"
-  ],
-  "author": "R4J M1SHR9",
-  "license": "MIT",
   "dependencies": {
-    "fca-mafiya": "latest"
+    "fca-mafiya": "latest",
+    "express": "^4.18.2",
+    "ws": "^8.14.2",
+    "axios": "^1.6.0"
   },
-  "engines": {
-    "node": ">=14.0.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "your-repository-url-here"
-  }
+  "author": "R4J",
+  "license": "MIT"
 }
